Add backend config

--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -26,8 +26,8 @@ jobs:
       run: terraform init
       env:
         TF_ACTION_WORKING_DIR: '.'
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        backend-config: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        backend-config: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Terraform Validate
       id: validate
