--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,11 +40,10 @@ jobs:
       continue-on-error: true
 
     - name: Update Pull Request
-      # uses: actions/github-script@6
       if: github.event_name == 'pull_request'
       env:
         PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-      with:
+      run:
         script: |
           const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
           #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
