--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -37,6 +37,10 @@ jobs:
       id: plan
       if: github.event_name == 'pull_request'
       run: terraform plan -no-color -input=false
+      env:
+        TF_ACTION_WORKING_DIR: '.'
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       continue-on-error: true
 
     - name: Update Pull Request
