--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -43,13 +43,16 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       continue-on-error: true
 
+    - name: tfsec
+      uses: aquasecurity/tfsec-action@v1.0.0
+
     - name: Update Pull Request
       if: github.event_name == 'pull_request'
       env:
         PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
       run: |
-         chmod +x ../script.sh
-         ../script.sh
+         chmod +x ./script.sh
+         ./script.sh
       shell: bash
 
     - name: Terraform Plan Status
