--- a/.github/workflows/actions-pipeline.yaml
+++ b/.github/workflows/actions-pipeline.yaml
@@ -52,6 +52,36 @@ jobs:
       if: steps.plan.outcome == 'failure'
       run: exit 1
 
+    - name: Setup Infracost
+      if: github.event_name == 'pull_request'
+      uses: infracost/actions/setup@v2
+      with:
+        api-key: ${{ secrets.INFRACOST_API_KEY }}
+
+    - name: Generate Infracost cost estimate baseline
+      if: github.event_name == 'pull_request'
+      run: |
+        infracost breakdown --path=${TF_ROOT} \
+                            --format=json \
+                            --out-file=/tmp/infracost-base.json
+
+    - name: Generate Infracost diff
+      if: github.event_name == 'pull_request'
+      run: |
+        infracost diff --path=${TF_ROOT} \
+                       --format=json \
+                       --compare-to=/tmp/infracost-base.json \
+                       --out-file=/tmp/infracost.json
+       
+    - name: Post Infracost comment
+      if: github.event_name == 'pull_request'
+      run: |
+          infracost comment github --path=/tmp/infracost.json \
+                                   --repo=$GITHUB_REPOSITORY \
+                                   --github-token=${{github.token}} \
+                                   --pull-request=${{github.event.pull_request.number}} \
+                                   --behavior=update
+
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
