Update TF_ROOT in infracost

--- a/.github/workflows/actions-pipeline.yaml
+++ b/.github/workflows/actions-pipeline.yaml
@@ -60,6 +60,8 @@ jobs:
 
     - name: Generate Infracost cost estimate baseline
       if: github.event_name == 'pull_request'
+      env:
+        TF_ROOT: '.'
       run: |
         infracost breakdown --path=${TF_ROOT} \
                             --format=json \
@@ -67,6 +69,8 @@ jobs:
 
     - name: Generate Infracost diff
       if: github.event_name == 'pull_request'
+      env:
+        TF_ROOT: '.'
       run: |
         infracost diff --path=${TF_ROOT} \
                        --format=json \
