--- a/.github/workflows/actions-pipeline.yaml
+++ b/.github/workflows/actions-pipeline.yaml
@@ -60,19 +60,15 @@ jobs:
 
     - name: Generate Infracost cost estimate baseline
       if: github.event_name == 'pull_request'
-      # env:
-      #   TF_ROOT: 'TERRAFORM_CLI_PATH'
       run: |
-        infracost breakdown --path=$TERRAFORM_CLI_PATH \
+        infracost breakdown --path=${TERRAFORM_CLI_PATH} \
                             --format=json \
                             --out-file=/tmp/infracost-base.json
 
     - name: Generate Infracost diff
       if: github.event_name == 'pull_request'
-      # env:
-      #   TF_ROOT: 'TERRAFORM_CLI_PATH'
       run: |
-        infracost diff --path=$TERRAFORM_CLI_PATH \
+        infracost diff --path=${TERRAFORM_CLI_PATH} \
                        --format=json \
                        --compare-to=/tmp/infracost-base.json \
                        --out-file=/tmp/infracost.json
