--- a/.github/workflows/actions-pipeline.yaml
+++ b/.github/workflows/actions-pipeline.yaml
@@ -89,10 +89,10 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-    - name: Generate Terraform docs
-      uses: terraform-docs/gh-actions@main
-      with:
-        working-dir: .
-        output-file: README.md
-        output-method: inject
-        git-push: "true"
+    # - name: Generate Terraform docs
+    #   uses: terraform-docs/gh-actions@main
+    #   with:
+    #     working-dir: .
+    #     output-file: README.md
+    #     output-method: inject
+    #     git-push: "true"
